@@ -18,17 +18,63 @@ Returns:
 
 ```json
 {
-  "id" : 79,
-  "commands" : "",
-  "path" : "",
-  "ref" : "",
-  "sha" : "",
-  "project_id" : 6,
-  "repo_url" : "git@demo.gitlab.com:gitlab/gitlab-shell.git",
-  "before_sha" : ""
+  "id": 48584,
+  "ref": "0.1.1",
+  "tag": true,
+  "sha": "d63117656af6ff57d99e50cc270f854691f335ad",
+  "status": "success",
+  "name": "pages",
+  "token": "9dd60b4f1a439d1765357446c1084c",
+  "stage": "test",
+  "project_id": 479,
+  "project_name": "test",
+  "commands": "echo commands",
+  "repo_url": "http://gitlab-ci-token:token@gitlab.example/group/test.git",
+  "before_sha": "0000000000000000000000000000000000000000",
+  "allow_git_fetch": false,
+  "options": {
+    "image": "docker:image",
+    "artifacts": {
+      "paths": [
+        "public"
+      ]
+    },
+    "cache": {
+      "paths": [
+        "vendor"
+      ]
+    }
+  },
+  "timeout": 3600,
+  "variables": [
+    {
+      "key": "CI_BUILD_TAG",
+      "value": "0.1.1",
+      "public": true
+    }
+  ],
+  "dependencies": {
+    "builds": [
+      {
+        "id": 48584,
+        "ref": "0.1.1",
+        "tag": true,
+        "sha": "d63117656af6ff57d99e50cc270f854691f335ad",
+        "status": "success",
+        "name": "build",
+        "token": "9dd60b4f1a439d1765357446c1084c",
+        "stage": "build",
+        "project_id": 479,
+        "project_name": "test",
+        "artifacts_file": {
+          "filename": "artifacts.zip",
+          "size": 0
+        }
+      }
+    ]
+  }
 }
 ```
-
 
 ### Update details of an existing build
 
