@@ -101,6 +101,18 @@ describe Ci::API::API do
           { "key" => "TRIGGER_KEY", "value" => "TRIGGER_VALUE", "public" => false },
         ])
       end
+
+      it "returns dependent builds" do
+        commit = FactoryGirl.create(:ci_commit, project: project)
+        commit.create_builds('master', false, nil, nil)
+        commit.builds.where(stage: 'test').each(&:success)
+
+        post ci_api("/builds/register"), token: runner.token, info: { platform: :darwin }
+
+        expect(response.status).to eq(201)
+        expect(json_response["dependencies"]["builds"].count).to eq(2)
+        expect(json_response["dependencies"]["builds"][0]["name"]).to eq("rspec")
+      end
     end
 
     describe "PUT /builds/:id" do
